Fix Invoice and Purchase Order widgets to make text visible in dark mode

--- a/purchase-orders/purchase_order.css
+++ b/purchase-orders/purchase_order.css
@@ -26,7 +26,6 @@ body {
 }
 
 .info .meta::after {
-  color: black;
   content: " :";
 }
 
@@ -57,7 +56,7 @@ body {
 
 .vendor .details {
   padding: 4px;
-  background-color: white;
+  background-color: var(--grist-theme-page-panels-main-panel-bg);
 }
 
 table.items {
@@ -75,7 +74,7 @@ table.items th {
 }
 
 table.items td {
-  background-color: white;
+  background-color: var(--grist-theme-page-panels-main-panel-bg);
   padding: 4px;
 }
 
